--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/images/Talviewlogo.png" /> -->
+    <meta name="description" content="Easily create job descriptions and interview questions for free with our Effortless tools designed for Hiring Managers. Streamline your hiring process today!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talviews Generator</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/Talview-Favicon.svg"/>
+    <title>Free AI Job Description Generator|Talview</title>
   </head>
   <body>
     <div id="root"></div>
