--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/Talview-Favicon.svg"/>
     <title>Free AI Job Description Generator | Talview</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QDXGTEEMG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-8QDXGTEEMG', {
+        'cookie_flags': 'SameSite=None;Secure',
+        'cookie_domain': 'ai-agents.talview.com',
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
