--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Easily create job descriptions and interview questions for free with our Effortless tools designed for Hiring Managers. Streamline your hiring process today!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/src/assets/images/Talview-Favicon.svg"/> -->
-    <link rel="icon" type="image/svg+xml" href="https://ai-agents.talview.com/src/assets/images/Talview-Favicon.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/Talview-Favicon.svg"/>
+    <!-- <link rel="icon" type="image/svg+xml" href="https://ai-agents.talview.com/src/assets/images/Talview-Favicon.svg"/>
     <link rel="shortcut icon" href="https://ai-agents.talview.com/src/assets/images/Talview-Favicon.svg"/>
-    <link rel="apple-touch-icon" href="https://ai-agents.talview.com/src/assets/images/Talview-Favicon.svg"/>
+    <link rel="apple-touch-icon" href="https://ai-agents.talview.com/src/assets/images/Talview-Favicon.svg"/> -->
     <title>Free AI Job Description Generator | Talview</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QDXGTEEMG"></script>
     <script>
