--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Easily create job descriptions and interview questions for free with our Effortless tools designed for Hiring Managers. Streamline your hiring process today!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./public/favicon.png"/>
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <title>Free AI Job Description Generator | Talview</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QDXGTEEMG"></script>
     <script>
